Sidebar links change

--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -5,10 +5,10 @@
        href="{{ site.hydeout.repo }}">
       {% include svg/github.svg %}
     </a>
-    <a id="github-download-link"
-       class="icon" title="Download" aria-label="Download"
-       href="{{ site.hydeout.repo }}/archive/v{{ site.hydeout.version }}.zip">
-      {% include svg/download.svg %}
+    <a id="LinkedIn-link"
+       class="icon" title="LinkedIn" aria-label="LinkedIn"
+       href="https://www.linkedin.com/in/danieljashton/">
+      {% include svg/61109.svg %}
     </a>
   {% endif %}
 
