--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -8,7 +8,7 @@
     <a id="LinkedIn-link"
        class="icon" title="LinkedIn" aria-label="LinkedIn"
        href="https://www.linkedin.com/in/danieljashton/">
-      {% include svg/61109.svg %}
+      {% include svg/linkedin.svg %}
     </a>
   {% endif %}
 
