--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -12,10 +12,10 @@
     </a>
   {% endif %}
 
-  <a id="subscribe-link"
-     class="icon" title="Subscribe" aria-label="Subscribe"
-     href="{{ site.feed.path | default: 'feed.xml' | relative_url }}">
-    {% include svg/feed.svg %}
+  <a id="Mail-link"
+     class="icon" title="Email" aria-label="Email"
+     href="mailto:daniel.ashton1@outlook.com">
+    {% include svg/Mail.svg %}
   </a>
 
   {% comment %}
